# playwright-web-automation

./: .gitignore  README.md  config.ini  conftest.py  pyproject.toml
enums/: notifications.py
pages/: base_page.py  contact_page.py  login_page.py  register_page.py  secured_area_page.py
tests/: test_login_and_send_message.py  test_register_login_send_message.py
utils/: allure_logger.py
